SongTextHandler add
